examples/test/testpolicy5692.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5692
  namespace: namespace372
spec:
  podSelector:
    matchLabels:
      key26: value33
      key6: value23
      key48: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value10
      podSelector:
        matchLabels:
          key32: value27
          key44: value16
